# ai-world-radar

./: .env.example  .gitignore  DESIGN.md  PRODUCT.md
apps/worker/: alembic.ini  pyproject.toml  pytest.ini  requirements.txt
apps/worker/scratch/: README.md
apps/worker/scripts/: __init__.py  cleanup_duplicate_github_trend_events.py  collect_source_signals.py  run_daily_pipeline.py  run_event_pipeline.py  run_hn_pipeline.py  smoke_env_connectivity.py  smoke_llm_client.py  smoke_llm_event_pipeline.py  smoke_product_queries.py
apps/worker/tests/: test_agent_factory.py  test_agent_stubs.py  test_cleanup_duplicate_github_trend_events.py  test_collect_source_signals_script.py  test_config.py  test_cover_image_service.py  test_daily_pipeline_service.py  test_db_models.py  test_dedupe.py  test_dependency_imports.py  test_editorial_candidate_service.py  test_editorial_selector_agent.py  test_event_pipeline_agent_stubs.py  test_event_pipeline_llm_mode.py  test_event_pipeline_tools.py  test_event_pipeline_workflow.py  test_event_service.py  test_github_releases_collector.py  test_github_repo_trends_collector.py  test_github_trend_freshness_service.py  test_hn_algolia_collector.py  test_hn_event_pipeline.py  test_hn_scoring.py  test_hn_source_signal_adapter.py  test_legacy_boundaries.py  test_legacy_entrypoints.py  test_legacy_runtime_cleanup.py  test_llm_client.py  test_llm_editor_agent.py  test_llm_json_agent.py  test_llm_reviewer_agent.py  test_llm_writer_agent.py  test_migration_metadata.py  test_official_news_collector.py  test_page_cache.py  test_pipeline_report_writer.py  (+14 more)
(+173 files in other folders)
